amend media query for tablet, fix horizontal scroll for mobile, and reposition elements for both

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,19 +1,20 @@
 /****** VARIABLES ******/
 :root {
-  --color-logo-green: #54E6AF;
-  --color-button-hover-green: #B3FFE2;
-  --color-very-lght-grey: #C2CBE5;
-  --color-lght-grey: #5A668A;
-  --color-very-dark-grey: #2C344B;
+  --color-logo-green: #54e6af;
+  --color-button-hover-green: #b3ffe2;
+  --color-very-lght-grey: #c2cbe5;
+  --color-lght-grey: #5a668a;
+  --color-very-dark-grey: #2c344b;
   --color-almost-black: #121725;
-  --color-white: #FFFFFF;
-  --color-error-red: #FB3E3E;
+  --color-white: #ffffff;
+  --color-error-red: #fb3e3e;
 }
 
 /******  ******/
 *,
 *::before,
-*::after {
+*::after,
+html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -23,9 +24,10 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  font-family: 'Chivo', sans-serif;
+  font-family: "Chivo", sans-serif;
   background-image: url(../assets/assets/mobile/image-host.jpg);
   background-repeat: no-repeat;
+  background-position: right;
   background-size: cover;
 }
 
@@ -75,17 +77,19 @@ h1 span {
 
 .logo {
   padding: 1rem 2rem;
+  display: inline-block;
 }
 
 .main__wrapper {
   min-height: 100vh;
   background-color: rgba(18, 23, 37, 0.9);
+  max-width: 39rem;
 }
 
 .main__container {
   padding: 1.5rem;
   text-align: center;
-  max-width: 45rem;
+  max-width: 30rem;
 }
 
 .main__socials-list {
@@ -136,22 +140,28 @@ button:hover {
 }
 
 /****** TABLET ******/
-@media only screen and (min-width: 26.875rem) {
+@media only screen and (min-width: 37.5rem) {
   body {
     background-color: var(--color-almost-black);
     background-image: none;
+    background-image: url(../assets/assets/tablet/image-host.jpg);
+    background-size: inherit;
+    background-position: right;
+    background-repeat: no-repeat;
   }
   .main__wrapper {
-    background-image: url(../assets/assets/tablet/image-host.jpg);
-    background-repeat: no-repeat;
-    background-position-x: 30rem;
+    background-color: transparent;
   }
   .main__container {
     background-color: var(--color-almost-black);
     min-width: 39rem;
-    border: 1px solid red;
     position: relative;
-    transform: translate(0, 10rem);
+    transform: translate(0, 7.5rem);
+  }
+  h1 {
+    font-size: 2.8rem;
+    text-align: left;
+    line-height: 3.4rem;
   }
 }
 
